--- a/Docker.Dotnet.UI/Components/Pages/DockerPages/VolumesPage.razor
+++ b/Docker.Dotnet.UI/Components/Pages/DockerPages/VolumesPage.razor
@@ -7,43 +7,43 @@
 @inherits MyComponentBase<Docker.Dotnet.UI.ViewModels.VolumesPageViewModel>
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="pa-4">
-    <MudText Typo="Typo.h4" Class="mb-4">Docker Volumes</MudText>
+    <MudText Typo="Typo.h4" Class="mb-4">@Localizer["DOCKER_VOLUMES"]</MudText>
     
     @if (Vm?.Volumes == null || Vm.Volumes.Count == 0)
     {
-        <MudAlert Severity="Severity.Info">暂无卷</MudAlert>
+        <MudAlert Severity="Severity.Info">@Localizer["NO_VOLUMES"]</MudAlert>
     }
     else
     {
         <MudPaper Class="pa-3 mb-3" Elevation="0" >
             <MudGrid Spacing="2">
                 <MudItem xs="3" Class="d-flex align-center">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">卷名称</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["VOLUME_NAME"]</MudText>
                     <MudSpacer/>
                     <MudDivider Vertical FlexItem DividerType="DividerType.FullWidth" />
                 </MudItem>  
                 <MudItem xs="2" Class="d-flex align-center">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">驱动</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["DRIVER"]</MudText>
                     <MudSpacer/>
                     <MudDivider Vertical FlexItem DividerType="DividerType.FullWidth" />
                 </MudItem>
                 <MudItem xs="3" Class="d-flex align-center">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">挂载点</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["MOUNTPOINT"]</MudText>
                     <MudSpacer/>
                     <MudDivider Vertical FlexItem DividerType="DividerType.FullWidth" />
                 </MudItem>
                 <MudItem xs="1" Class="d-flex align-center">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">大小</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["SIZE"]</MudText>
                     <MudSpacer/>
                     <MudDivider Vertical FlexItem DividerType="DividerType.FullWidth" />
                 </MudItem>
                 <MudItem xs="1" Class="d-flex align-center">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">创建时间</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["CREATED_AT"]</MudText>
                     <MudSpacer/>
                     <MudDivider Vertical FlexItem DividerType="DividerType.FullWidth" />
                 </MudItem>
                 <MudItem xs="2" Class="d-flex align-center justify-end pr-8">
-                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">操作</MudText>
+                    <MudText Typo="Typo.subtitle2" Color="Color.Surface">@Localizer["ACTIONS"]</MudText>
                 </MudItem>
             </MudGrid>
         </MudPaper>
@@ -85,13 +85,13 @@
                                                Color="Color.Error"
                                                Size="Size.Small"
                                                OnClick="@(() => HandleDeleteVolume(volume.Name))"
-                                               title="删除" />
+                                               title='@Localizer["REMOVE"]' />
                                 
                                 <MudIconButton Icon="@Icons.Material.Filled.Info" 
                                                Color="Color.Primary"
                                                Size="Size.Small"
                                                OnClick="@(() => HandleViewDetails(volume.Name))"
-                                               title="详情" />
+                                               title='@Localizer["INFO"]' />
                             </MudStack>
                         </MudItem>
                     </MudGrid>
